# reattempt

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  top_level.txt
.github/actions/: build_docs.yml
.github/actions/test/: action.yml
.github/workflows/: build_docs.yml  release.yml  test.yml  update-deps.yml
docs/: contact.md  description.md  index.md  installation.md  license.md  reattempt.md  usage.md
reattempt/: __init__.py
scripts/: version.sh
src/reattempt/: __init__.py  __init__.pyi
test/: conftest.py  test_flowers.py  test_http.py  test_reattempt.py  test_type_checking.py
